pgcenter (devel) unstable; urgency=low
  * top: fix silent wreck of terminal when working with menus

pgcenter (0.8.0) unstable; urgency=low
  * add accounting of parallel workers stats when profiling (available only for PG13 and newer)
  * add support of pg_stat_statements WAL usage statistics
  * add support for pg_stat_progress_basebackup statistics
  * add support for pg_stat_progress_analyze statistics
  * fix connection problems related to absence needed conn options which required when using 'simple' protocol
  * update Go version up to 1.16
  * top: fix hangs on statistics writing when UI fails
  * use alpine as a base image for Docker
  * fix problems related to run using Docker
  * minor code improvements, comments

pgcenter (0.7.0) unstable; urgency=low
  * add golangci-lint, fix issues
  * add gosec, fix issues
  * add testing, major code and internal design refactoring

pgcenter (0.6.6) unstable; urgency=low
  * adjust query for getting statements rate, accordingly to v13.
  * adjust query for getting statements timings accordingly to v13. Exec and Plan times from pg_stat_statements are accounted together.

pgcenter (0.6.5) unstable; urgency=low
  * nothing important, removed old code, small refactoring and bugfixes
  * top: fix 'G' hotkey when building query report

pgcenter (0.6.4) unstable; urgency=low
pgcenter (0.6.3) unstable; urgency=low
  * nothing important, just attempts to fix CI errors

pgcenter (0.6.2) unstable; urgency=low
  * report: print header at the beginning of the output
  * top/report: refactoring aligning
  * adjust header's styles of iostat/nicstat tabs in top utility
  * added support for pg_stat_database.checksum_failures (pg-12)
  * added support of pg_stat_progress_cluster and pg_stat_progress_create_index views
  * inject program version info from git at build time
  * fix #66, pgcenter crashes when no running postgres
  * avoid rude disconnection from postgres at top-program exit

pgcenter (0.6.1) unstable; urgency=low